# bazel-29427-darwin-sandbox-repro

./: .gitignore  README.md  run-impact.sh  run.sh
victim-workspace/: BUILD.bazel  MODULE.bazel
workspace/: BUILD.bazel  MODULE.bazel  test_rule.bzl
